学习回溯法

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -7,4 +7,4 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 project (leetcode_test)
 
 # 指定生成目标
-add_executable(leetcode_test 56_merge.cpp 57_insert.cpp 59_generate_matrix.cpp 73_set_zeroes.cpp 74_search_matrix.cpp 75_sort_colors.cpp 80_remove_duplicates.cpp)
+add_executable(leetcode_test 78_subsets.cpp)
